Lab1 - добавлен счётчик добавленных методами строк

--- a/Lab1/Lab1/Lab1.csproj
+++ b/Lab1/Lab1/Lab1.csproj
@@ -13,10 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="commands.txt">
+    <Content Include="file\commands.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="sequences.txt">
+    <Content Include="file\sequences.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
