--- a/Lab5/Lab5/Lab5.csproj
+++ b/Lab5/Lab5/Lab5.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="обработка\список салатов\" />
+  </ItemGroup>
+
 </Project>
