Lab5 - встроенные ваианты ингредиентов. экпорт файлов xml

--- a/Lab5/Lab5/Lab5.csproj
+++ b/Lab5/Lab5/Lab5.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="обработка\список салатов\" />
+    <Folder Include="obrabotka\spisok\" />
   </ItemGroup>
 
 </Project>
